#!/usr/bin/env python3
"""
ç®€åŒ–æ¼”ç¤ºç‰ˆæœ¬ - ä¸ä¾èµ– protobuf å’Œ websockets
å±•ç¤ºç›‘æ§ç³»ç»Ÿçš„æ ¸å¿ƒå·¥ä½œæµç¨‹
"""

import json
import time
import random
from datetime import datetime

class RobotStateSimulator:
    """æ¨¡æ‹Ÿæœºå™¨äººçŠ¶æ€ç”Ÿæˆå™¨"""
    
    def __init__(self, robot_id):
        self.robot_id = robot_id
        self.frame = 0
        self.battery = 100.0
        self.game_state = 1  # READY
        self.ball_visible = False
        self.role = "striker"
        
    def generate_state(self):
        """ç”Ÿæˆä¸€ä¸ªçŠ¶æ€å¿«ç…§"""
        self.frame += 1
        self.battery -= random.uniform(0.01, 0.05)
        
        # æ¨¡æ‹Ÿçƒçš„å¯è§æ€§å˜åŒ–
        if random.random() < 0.1:
            self.ball_visible = not self.ball_visible
            
        state = {
            "robot_id": self.robot_id,
            "system": {
                "timestamp_ms": int(time.time() * 1000),
                "frame_number": self.frame,
                "battery_charge": round(self.battery, 2),
                "cpu_temperature": round(random.uniform(45, 55), 1),
                "is_fallen": False
            },
            "perception": {
                "ball": {
                    "visible": self.ball_visible,
                    "pos_x": random.randint(-500, 500) if self.ball_visible else 0,
                    "pos_y": random.randint(-500, 500) if self.ball_visible else 0
                },
                "localization": {
                    "pos_x": random.randint(-1000, 1000),
                    "pos_y": random.randint(-1000, 1000),
                    "quality": random.choice([0, 1, 2])
                }
            },
            "decision": {
                "game_state": self.game_state,
                "role": self.role,
                "motion_type": random.choice([0, 1, 2])
            },
            "events": []
        }
        
        return state

def main():
    print("="*60)
    print("Nao æœºå™¨äººç›‘æ§ç³»ç»Ÿ - ç®€åŒ–æ¼”ç¤º")
    print("="*60)
    print()
    
    # åˆ›å»º 3 ä¸ªæ¨¡æ‹Ÿæœºå™¨äºº
    robots = [
        RobotStateSimulator("bhuman_1"),
        RobotStateSimulator("bhuman_2"),
        RobotStateSimulator("bhuman_3")
    ]
    
    print("âœ… å·²åˆ›å»º 3 ä¸ªæ¨¡æ‹Ÿæœºå™¨äºº")
    print()
    
    # æ¨¡æ‹Ÿè¿è¡Œ 10 ç§’
    print("ğŸš€ å¼€å§‹æ¨¡æ‹Ÿç›‘æ§...")
    print()
    
    for i in range(10):
        print(f"--- ç¬¬ {i+1} ç§’ ---")
        
        for robot in robots:
            state = robot.generate_state()
            
            # æ˜¾ç¤ºå…³é”®ä¿¡æ¯
            print(f"  [{state['robot_id']}] "
                  f"ç”µé‡: {state['system']['battery_charge']}%, "
                  f"æ¸©åº¦: {state['system']['cpu_temperature']}Â°C, "
                  f"çƒå¯è§: {'âœ…' if state['perception']['ball']['visible'] else 'âŒ'}")
            
            # æ¨¡æ‹Ÿæ—¥å¿—å†™å…¥
            if i == 0:
                print(f"    ğŸ“ åˆ›å»ºæ—¥å¿—æ–‡ä»¶: logs/robot_{state['robot_id']}.jsonl")
        
        print()
        time.sleep(1)
    
    print("="*60)
    print("âœ… æ¼”ç¤ºå®Œæˆï¼")
    print()
    print("ğŸ“Š ç»Ÿè®¡ä¿¡æ¯:")
    for robot in robots:
        print(f"  {robot.robot_id}: {robot.frame} å¸§, "
              f"ç”µé‡å‰©ä½™ {robot.battery:.1f}%")
    print()
    print("ğŸ’¡ å®Œæ•´ç³»ç»ŸåŠŸèƒ½:")
    print("  - å®æ—¶ UDP é€šä¿¡ (Protobuf)")
    print("  - WebSocket å®æ—¶æ¨é€")
    print("  - JSON Lines æ—¥å¿—è®°å½•")
    print("  - Web GUI å¯è§†åŒ–")
    print("  - èµ›åæ•°æ®åˆ†æ")
    print("="*60)

if __name__ == '__main__':
    main()
